Fixed mod version