@@ -1,19 +1,19 @@
 package net.frostbyte.inventory.mixin;
 
+import net.frostbyte.inventory.ImprovedInventory;
 import net.frostbyte.inventory.config.ImprovedInventoryConfig;
 import net.frostbyte.inventory.gui.widget.TexturedButtonWithItemStackWidget;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.Drawable;
 import net.minecraft.client.gui.Element;
-import net.minecraft.client.gui.screen.ButtonTextures;
 import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.gui.screen.ingame.*;
 import net.minecraft.client.gui.tooltip.Tooltip;
 import net.minecraft.client.gui.widget.TexturedButtonWidget;
-import net.minecraft.component.DataComponentTypes;
-import net.minecraft.component.type.ProfileComponent;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
+import net.minecraft.nbt.NbtCompound;
+import net.minecraft.nbt.NbtHelper;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.Vec3i;
@@ -30,74 +30,50 @@ import static net.frostbyte.inventory.NearbyContainerViewer.*;
 public abstract class ScreenMixin {
     @Shadow protected abstract <T extends Element & Drawable> T addDrawableChild(T drawableElement);
     @Shadow protected abstract void clearChildren();
-    @Shadow public abstract void init();
+    @Shadow
+    protected abstract void init();
     @Shadow protected MinecraftClient client;
     @Unique
-    private static final ButtonTextures TEXTURES_LEFT = new ButtonTextures(
-        Identifier.of("container/creative_inventory/tab_top_unselected_1"),
-        Identifier.of("container/creative_inventory/tab_top_unselected_1")
-    );
+    private static final Identifier TEXTURES_LEFT = new Identifier("textures/gui/container/creative_inventory/tabs.png");
     @Unique
-    private static final ButtonTextures TEXTURES_LEFT_SELECTED = new ButtonTextures(
-        Identifier.of("container/creative_inventory/tab_top_selected_1"),
-        Identifier.of("container/creative_inventory/tab_top_selected_1")
-    );
+    private static final Identifier TEXTURES_LEFT_SELECTED = new Identifier("textures/gui/container/creative_inventory/tabs.png");
     @Unique
-    private static final ButtonTextures TEXTURES_MID = new ButtonTextures(
-        Identifier.of("container/creative_inventory/tab_top_unselected_2"),
-        Identifier.of("container/creative_inventory/tab_top_unselected_2")
-    );
+    private static final Identifier TEXTURES_MID = new Identifier("textures/gui/container/creative_inventory/tabs.png");
     @Unique
-    private static final ButtonTextures TEXTURES_MID_SELECTED = new ButtonTextures(
-        Identifier.of("container/creative_inventory/tab_top_selected_2"),
-        Identifier.of("container/creative_inventory/tab_top_selected_2")
-    );
+    private static final Identifier TEXTURES_MID_SELECTED = new Identifier("textures/gui/container/creative_inventory/tabs.png");
     @Unique
-    private static final ButtonTextures TEXTURES_RIGHT = new ButtonTextures(
-        Identifier.of("container/creative_inventory/tab_top_unselected_7"),
-        Identifier.of("container/creative_inventory/tab_top_unselected_7")
-    );
+    private static final Identifier TEXTURES_RIGHT = new Identifier("textures/gui/container/creative_inventory/tabs.png");
     @Unique
-    private static final ButtonTextures TEXTURES_RIGHT_SELECTED = new ButtonTextures(
-        Identifier.of("container/creative_inventory/tab_top_selected_7"),
-        Identifier.of("container/creative_inventory/tab_top_selected_7")
-    );
+    private static final Identifier TEXTURES_RIGHT_SELECTED = new Identifier("textures/gui/container/creative_inventory/tabs.png");
     @Unique
-    private static final ButtonTextures TEXTURES_FORWARD = new ButtonTextures(
-        Identifier.of("transferable_list/select"),
-        Identifier.of("transferable_list/select_highlighted")
-    );
+    private static final Identifier TEXTURES_FORWARD = new Identifier(ImprovedInventory.MOD_ID, "textures/gui/sprites/transferable_list/select.png");
     @Unique
-    private static final ButtonTextures TEXTURES_BACK = new ButtonTextures(
-        Identifier.of("transferable_list/unselect"),
-        Identifier.of("transferable_list/unselect_highlighted")
-    );
+    private static final Identifier TEXTURES_BACK = new Identifier(ImprovedInventory.MOD_ID, "textures/gui/sprites/transferable_list/unselect.png");
     @Unique
     int screenWidth = 176;
     @Unique
     int screenHeight = 166;
 
-    @Inject(method = "init", at = @At("HEAD"))
+    @Inject(method = "init*", at = @At("HEAD"))
     public void init(MinecraftClient client, int width, int height, CallbackInfo ci) {
         if (ImprovedInventoryConfig.containerTab && !containers.isEmpty() && client.world != null && client.player != null && client.interactionManager != null && client.currentScreen instanceof HandledScreen<?> screen && !(client.currentScreen instanceof CreativeInventoryScreen) && !(client.currentScreen instanceof MerchantScreen)) {
-
-            switch (screen) {
-                case GenericContainerScreen containerScreen ->
-                    screenHeight = 114 + containerScreen.getScreenHandler().getRows() * 18;
-                case HopperScreen ignored ->
-                    screenHeight = 135;
-                case ShulkerBoxScreen ignored ->
-                    screenHeight = 169;
-                default -> {
-                    // Do Nothing
-                }
+            
+            if (screen instanceof GenericContainerScreen containerScreen) {
+                screenHeight = 114 + containerScreen.getScreenHandler().getRows() * 18;
+            } else if (screen instanceof HopperScreen) {
+                screenHeight = 135;
+            } else if (screen instanceof ShulkerBoxScreen) {
+                screenHeight = 169;
             }
 
-            ItemStack playerHead = new ItemStack(Items.PLAYER_HEAD);
-            playerHead.set(DataComponentTypes.PROFILE, new ProfileComponent(client.player.getGameProfile()));
+            ItemStack playerHead = Items.PLAYER_HEAD.getDefaultStack();
+            NbtCompound nbtCompound = new NbtCompound();
+            nbtCompound.put("SkullOwner", NbtHelper.writeGameProfile(new NbtCompound(), client.player.getGameProfile()));
+            playerHead.setNbt(nbtCompound);
+
             TexturedButtonWithItemStackWidget tab;
             if (client.currentScreen instanceof AbstractInventoryScreen<?>) {
-                tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2, height / 2 - screenHeight / 2 - 28, 26, 32, TEXTURES_LEFT_SELECTED, playerHead, button -> {
+                tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2, height / 2 - screenHeight / 2 - 28, 26, 32, 0, 0, TEXTURES_LEFT_SELECTED, playerHead, button -> {
                     if (client.interactionManager.hasRidingInventory()) {
                         client.player.openRidingInventory();
                     } else {
@@ -105,7 +81,7 @@ public abstract class ScreenMixin {
                     }
                 });
             } else {
-                tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2, height / 2 - screenHeight / 2 - 28, 26, 28, TEXTURES_LEFT, playerHead, button -> {
+                tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2, height / 2 - screenHeight / 2 - 32, 26, 32, 0, 0, TEXTURES_LEFT, playerHead, button -> {
                     if (client.interactionManager.hasRidingInventory()) {
                         client.player.openRidingInventory();
                     } else {
@@ -123,15 +99,15 @@ public abstract class ScreenMixin {
                 ItemStack displayStack = getDisplayStack(containers.get(container));
                 if (i == 5) {
                     if (!(client.currentScreen instanceof AbstractInventoryScreen<?>) && current == container) {
-                        tab = new TexturedButtonWithItemStackWidget(width / 2 + screenWidth / 2 - 26, height / 2 - screenHeight / 2 - 28, 26, 32, TEXTURES_RIGHT_SELECTED, displayStack, button -> openContainer(container));
+                        tab = new TexturedButtonWithItemStackWidget(width / 2 + screenWidth / 2 - 26, height / 2 - screenHeight / 2 - 28, 26, 32, 156, 0, TEXTURES_RIGHT_SELECTED, displayStack, button -> openContainer(container));
                     } else {
-                        tab = new TexturedButtonWithItemStackWidget(width / 2 + screenWidth / 2 - 26, height / 2 - screenHeight / 2 - 28, 26, 28, TEXTURES_RIGHT, displayStack, button -> openContainer(container));
+                        tab = new TexturedButtonWithItemStackWidget(width / 2 + screenWidth / 2 - 26, height / 2 - screenHeight / 2 - 32, 26, 32, 156, 0, TEXTURES_RIGHT, displayStack, button -> openContainer(container));
                     }
                 } else {
                     if (!(client.currentScreen instanceof AbstractInventoryScreen<?>) && current == container) {
-                        tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2 + (i + 1) * 25, height / 2 - screenHeight / 2 - 28, 26, 32, TEXTURES_MID_SELECTED, displayStack, button -> openContainer(container));
+                        tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2 + (i + 1) * 25, height / 2 - screenHeight / 2 - 28, 26, 32, 26, 0, TEXTURES_MID_SELECTED, displayStack, button -> openContainer(container));
                     } else {
-                        tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2 + (i + 1) * 25, height / 2 - screenHeight / 2 - 28, 26, 28, TEXTURES_MID, displayStack, button -> openContainer(container));
+                        tab = new TexturedButtonWithItemStackWidget(width / 2 - screenWidth / 2 + (i + 1) * 25, height / 2 - screenHeight / 2 - 32, 26, 32, 26, 0, TEXTURES_MID, displayStack, button -> openContainer(container));
                     }
                 }
                 tab.setTooltip(Tooltip.of(displayName));
@@ -139,17 +115,17 @@ public abstract class ScreenMixin {
             }
 
             if (containers.size() > 6) {
-                TexturedButtonWidget backButton = new TexturedButtonWidget(width / 2 + screenWidth / 2 - 2, height / 2 - screenHeight / 2 - 24, 24, 24, TEXTURES_FORWARD, button -> {
+                TexturedButtonWidget backButton = new TexturedButtonWidget(width / 2 + screenWidth / 2 - 2, height / 2 - screenHeight / 2 - 24, 24, 24, 0, 0, TEXTURES_FORWARD, button -> {
                     Vec3i temp = containers.get(current);
-                    containers.addLast(containers.removeFirst());
+                    containers.add(containers.remove(0));
                     current = containers.indexOf(temp);
                     this.clearChildren();
                     this.init(client, width, height, ci);
                     this.init();
                 });
-                TexturedButtonWidget forwardButton = new TexturedButtonWidget(width / 2 - screenWidth / 2 - 17, height / 2 - screenHeight / 2 - 24, 24, 24, TEXTURES_BACK, button -> {
+                TexturedButtonWidget forwardButton = new TexturedButtonWidget(width / 2 - screenWidth / 2 - 17, height / 2 - screenHeight / 2 - 24, 24, 24, 0, 0, TEXTURES_BACK, button -> {
                     Vec3i temp = containers.get(current);
-                    containers.addFirst(containers.removeLast());
+                    containers.add(0, containers.remove(containers.size() - 1));
                     current = containers.indexOf(temp);
                     this.clearChildren();
                     this.init(client, width, height, ci);
